--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
 
 	
-	<p> My research is on applied microeconomics. I am interested in the quantitative modeling of personal attributes within <span><b>family dynamics</b></span>, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of <span><b>technological change</b></span> on labor markets and its implications for household behavior. To investigate these topics, I use methods ranging from <span><b>structural econometrics</b></span> to <span><b>causal inference</b></span>.</p>
+	<p> My research is on <span><b>applied microeconomics</b></span>. I am interested in the quantitative modeling of personal attributes within family dynamics, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of external shocks on labor markets and their implications for household behavior. To investigate these topics, I use methods ranging from structural econometrics to causal inference.</p>
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
