--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
-	<p><span><a class="two" href="https://gaston-fernandez.github.io/research.html" target="_blank">Get my Job Market Paper here</a>. </span></p>
+	<p><span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank">Get my Job Market Paper here</a>. </span></p>
 		
 	<p><span>Additional Job Market information can be found <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank">here</a>.</span></p>
 
