--- a/job_market.html
+++ b/job_market.html
@@ -39,7 +39,7 @@
   </nav>
 <h2 id="job_market">Job Market information:</h2>	
 
-<strong> Job Market Paper</strong>: <i>download here</i> <br>
+<strong> Job Market Paper</strong>: <a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> <br>
 <br>
 <strong> Research statement</strong>: <i>download here</i> <br>
 <br>	
