--- a/research.html
+++ b/research.html
@@ -139,7 +139,8 @@ Joint with <a class="two" href="https://sites.google.com/site/laurenscherchye/ho
 <strong>Artificial Intelligence and the demand for labor: Evidence from German firm-level</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=9zXMofcAAAAJ&hl=en" target="_blank">Bettina Peters</a><br>	
 <em><span style="font-size: 80%;"> Presented at: Workshop on the Economics of Innovation 2023, ZEW/MaCCI 2022</span></em><br>
-<span style="font-size: 80%;">Draft soon </a> </span>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstractAIEMP')">Abstract</a> · Draft soon </a> </span>
+<div id="abstractAIEMP" style="display:none; font-size: 80%;">Do Artificial Intelligence (AI) and its rapid penetration and far-reaching use across all economic sectors will cause unemployment? This paper exploits unique survey data on firms’ adoption of AI technology and AI methods and estimates their impact on the demand for labor using a sample of German firms. We extend existing models relating firms’ employment to innovation by adding AI technology to product and process innovation measures in empirical models of labor demand. Overall, we find positive and significant effects of AI adoption on labor demand. In particular, we observe that the impact of AI dominates the positive employment effect of (traditional) product innovations. We also find that machine learning among different types of AI technologies seem to be the main driver for increased demand for labor. To account for the potential endogeneity of AI adoption, we implement an IV strategy.</div>	
 </p>
 <hr class="publication-divider">
 	
