--- a/index.html
+++ b/index.html
@@ -83,23 +83,30 @@
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 </br>
-	  
+<table>
+<tr>
+<td> Research Interests</td>
+<td> References</td>	
+<td> Contact Information</td>		
+</tr>
+</table>
+  
 <!-- <style> .third { width: 45%; float: left; } </style> -->
-<div class="third" style="margin: 0 -20px 0px 0"> 
+<!-- <div class="third" style="margin: 0 -20px 0px 0"> 
 <h3 >Research interests:</h3>
   <li> Family economics </li>
   <li> Child development</li>
   <li> Technological change</li>
 
-</div>
+</div> -->
 	  
-<div class="third" style="margin: 0 -20px 0px 0"> 
+<!-- <div class="third" style="margin: 0 -20px 0px 0"> 
 <h3>References:</h3>
   <li><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></li>
   <li><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></li>
   <li><a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></li>
 
-</div>	
+</div>	 -->
 
 
 </br>
