--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
 </br>
 <table>
 <tr>
-<td> Research Interests</td>
-<td> References</td>	
-<td> Contact Information</td>		
+<td> <b>Research Interests</b></td>
+<td> <b>References</b></td>	
+<td> <b>Contact Information</b></td>		
 </tr>
+	
 </table>
   
 <!-- <style> .third { width: 45%; float: left; } </style> -->
