--- a/index.html
+++ b/index.html
@@ -85,10 +85,22 @@
 </br>
 <table>
 <tr>
-<td> <b>Research Interests</b></td>
+<td> <b>Research interests:</b></td>
 <td> <b>References</b></td>	
 <td> <b>Contact Information</b></td>		
 </tr>
+
+<tr>
+<td> <b>Household economics</b></td>
+<td> <b>Child development</b></td>	
+<td> <b>Technological change</b></td>		
+</tr>	
+
+<tr>
+<td> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>		
+<td> <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></td>
+<td> <a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></td>		
+</tr>	
 	
 </table>
   
