--- a/index.html
+++ b/index.html
@@ -86,20 +86,22 @@
 <table>
 <tr>
 <td> <b>Research interests:</b></td>
-<td> <b>References</b></td>	
-<td> <b>Contact Information</b></td>		
+<td> Household economics</td>	
+<td> Child development</td>	
+<td> Technological change</td>	
 </tr>
 
 <tr>
-<td> <b>Household economics</b></td>
-<td> <b>Child development</b></td>	
-<td> <b>Technological change</b></td>		
+<td> <b>References:</b></td>
+<td> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>	
+<td> <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></td>		
+<td> <a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></td>			
 </tr>	
 
 <tr>
-<td> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>		
-<td> <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></td>
-<td> <a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></td>		
+<td>Contact Information</td>		
+<td> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></td>
+
 </tr>	
 	
 </table>
