--- a/index.html
+++ b/index.html
@@ -79,19 +79,26 @@
 		
 	<p><span>Additional Job Market information can be found <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank">here</a>.</span></p>
 
-	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>  
+<!-- 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>   -->
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 </br>
 <table>
 <tr>
 <td> <b>Research interests:</b></td>
+</tr>
+
+<tr>	
 <td> Household economics</td>	
+</tr>	
+<tr>	
 <td> Child development</td>	
+</tr>	
+<tr>	
 <td> Technological change</td>	
 </tr>
 
-<tr>
+<!-- <tr>
 <td> <b>References:</b></td>
 <td> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>	
 <td> <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></td>		
@@ -102,7 +109,7 @@
 <td>Contact Information</td>		
 <td> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></td>
 
-</tr>	
+</tr>	 -->
 	
 </table>
   
