--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
 </br>
 <table>
 <tr>
-<td> <b>Research interests:</b></td>
+    <td style="padding: 2px; line-height: 1;"> <b>Research interests:</b></td>
 </tr>
-
-<tr>	
-<td> Household economics</td>	
+<tr> 
+<td style="padding: 2px; line-height: 1;"> Household economics</td>	
 </tr>	
 <tr>	
 <td> Child development</td>	
