--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 </br>
 <table>
 <tr>
-    <td style="padding: 2px; line-height: 1;"> <b>Research interests:</b></td>
+    <td style="padding: 2px; line-height: 3;"> <b>Research interests:</b></td>
 </tr>
 <tr> 
 <td style="padding: 2px; line-height: 1;"> Household economics</td>	
 </tr>	
 <tr>	
-<td> Child development</td>	
+<td style="padding: 3px; line-height: 1;">Child development</td>	
 </tr>	
 <tr>	
 <td> Technological change</td>	
