--- a/index.html
+++ b/index.html
@@ -83,14 +83,16 @@
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 </br>
-<table>
+<table cellspacing="10">
 <tr>
 <td style="padding: 2px; line-height: 3;"> <b>Research interests:</b></td>
 <td style="padding: 2px; line-height: 3;"> <b>References:</b></td>	
+<td style="padding: 2px; line-height: 3;"> <b>Contact:</b></td>		
 </tr>
 <tr> 
 <td style="padding: 2px; line-height: 1.5;">Household economics</td>	
 <td style="padding: 2px; line-height: 1.5;"><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>		
+<td style="padding: 2px; line-height: 1.5;"><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></td>	
 </tr>	
 <tr>	
 <td style="padding: 3px; line-height: 1.5;">Child development</td>	
