--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
 
-<img src="https://gaston-fernandez.github.io/files/barros_MG_4817s2-min.jpg" class="profile-img"/>
+<img src="https://gaston-fernandez.github.io/files/FVL_0593.jpg" class="profile-img"/>
 
   	  
 <div class="content-area">	
@@ -83,9 +83,14 @@
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 
-
+<style>
+  table {
+    border-spacing: 10px; /* Adjust the value as needed */
+  }
+</style>
+	
 </br>
-<table cellspacing="100">
+<table>
 <tr>
 <td style="padding: 2px; line-height: 3;"> <b>Research interests:</b></td>
 <td style="padding: 2px; line-height: 3;"> <b>References:</b></td>	
