--- a/job_market.html
+++ b/job_market.html
@@ -45,7 +45,7 @@
 <br>	
 <strong> Teaching statement</strong>: <i>download here</i> <br>
 <br>	
-<strong> Inclusivity statement</strong>: <i>download here</i> <br>	
+<strong> Diversity statement</strong>: <i>download here</i> <br>	
 <br>	
 <strong> Contact:</strong> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a>
 <br>
