--- a/index.html
+++ b/index.html
@@ -83,14 +83,9 @@
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 
-<style>
-  table {
-    border-spacing: 10px; /* Adjust the value as needed */
-  }
-</style>
-	
+
 </br>
-<table>
+<table style="border-collapse: separate; border-spacing: 10px;">
 <tr>
 <td style="padding: 2px; line-height: 3;"> <b>Research interests:</b></td>
 <td style="padding: 2px; line-height: 3;"> <b>References:</b></td>	
