--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
 
 </br>
-<table>
+<table style="border-collapse: separate; border-spacing: 2px;">
 <tr>
-<td style="padding: 2px 20px 2px 2px; line-height: 3;"> <b>Research interests:</b></td>
+<td style="padding: 2px; line-height: 3;"> <b>Research interests:</b></td>
 <td style="padding: 2px; line-height: 3;"> <b>References:</b></td>	
 <td style="padding: 2px; line-height: 3;"> <b>Contact:</b></td>		
 </tr>
