--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 <table style="border-collapse: separate; border-spacing: 8px;">
 <tr>
 <td style="padding: 1px; line-height: 3;"> <b>Research interests:</b></td>
+<td style="padding: 1px; line-height: 3;"> </td>	
 <td style="padding: 2px; line-height: 3;"> <b>References:</b></td>	
+<td style="padding: 1px; line-height: 3;"> </td>		
 <td style="padding: 2px; line-height: 3;"> <b>Contact:</b></td>		
 </tr>
 <tr> 
