--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
-	<p>Get my <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank">Job Market Paper here</a>. Additional Job Market information <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank">here</a>. </span></p>
+	<p>Get my <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank">Job Market Paper here</a> and additional Job Market information <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank">here</a>. </span></p>
 		
 <!-- 	<p><span>Additional Job Market information can be found <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank">here</a>.</span></p> -->
 
@@ -88,8 +88,10 @@
 <table style="border-collapse: separate; border-spacing: 8px;">
 <tr>
 <td style="padding: 1px; line-height: 3;"> <b>Research interests:</b></td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>	
 <td style="padding: 2px; line-height: 3;"> <b>References:</b></td>	
-<td style="padding: 2px; line-height: 3;"> <b>Contact:</b></td>		
+<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>	
+<td style="padding: 2px; line-height: 3;"> <b>Contact:</b></td>			
 </tr>
 <tr> 
 <td style="padding: 1px; line-height: 1.5;">Household economics</td>	
