--- a/index.html
+++ b/index.html
@@ -85,7 +85,23 @@
 
 
 </br>
-<table style="border-collapse: separate; border-spacing: 8px;">
+<table>
+    <tr>
+        <td>hello</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>world</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>how</td>
+    </tr>
+    <tr>
+        <td>hello</td>
+        <td></td>
+        <td>world</td>
+        <td></td>
+        <td>how</td>
+    </tr>
+</table>	
+<!-- <table style="border-collapse: separate; border-spacing: 8px;">
 <tr>
 <td style="padding: 1px; line-height: 3;"> <b>Research interests:</b></td>
 <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>	
@@ -107,7 +123,7 @@
 <td style="padding: 2px; line-height: 1.5;"><a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></td>		
 </tr>
 
-</table>
+</table> -->
   
 <!-- <style> .third { width: 45%; float: left; } </style> -->
 <!-- <div class="third" style="margin: 0 -20px 0px 0"> 
