--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
 </br>
 <table>
     <tr>
-        <td>hello</td>
+        <td><b>Research interests:</b></td>
         <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td>world</td>
+        <td><b>References:</b></td>
         <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td>how</td>
+        <td><b>Contact:</b></td>
     </tr>
     <tr>
-        <td>hello</td>
+        <td>Household economics</td>
         <td></td>
-        <td>world</td>
+        <td><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>
         <td></td>
-        <td>how</td>
+        <td><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><</td>
     </tr>
 </table>	
 <!-- <table style="border-collapse: separate; border-spacing: 8px;">
