--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 <table>
     <tr>
         <td><b>Research interests:</b></td>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>&nbsp;&nbsp;</td>
         <td><b>References:</b></td>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>&nbsp;&nbsp;</td>
         <td><b>Contact:</b></td>
     </tr>
     <tr>
