--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     </tr>
     <tr>
         <td>Household economics</td>
-        <td></td>
+        <td>&nbsp;&nbsp;</td>
         <td><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>
-        <td></td>
+        <td>&nbsp;&nbsp;</td>
         <td><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><</td>
     </tr>
 </table>	
