--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <td>&nbsp;&nbsp;</td>
         <td><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>
         <td>&nbsp;&nbsp;</td>
-        <td><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><</td>
+        <td><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></td>
     </tr>
 </table>	
 <!-- <table style="border-collapse: separate; border-spacing: 8px;">
