--- a/index.html
+++ b/index.html
@@ -83,24 +83,9 @@
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
 
-
+	<b>Research interests:</b>
 </br>
-<table>
-    <tr>
-        <td><b>Research interests:</b></td>
-        <td>&nbsp;&nbsp;</td>
-        <td><b>References:</b></td>
-        <td>&nbsp;&nbsp;</td>
-        <td><b>Contact:</b></td>
-    </tr>
-    <tr>
-        <td>Household economics</td>
-        <td>&nbsp;&nbsp;</td>
-        <td><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></td>
-        <td>&nbsp;&nbsp;</td>
-        <td><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></td>
-    </tr>
-</table>	
+
 <!-- <table style="border-collapse: separate; border-spacing: 8px;">
 <tr>
 <td style="padding: 1px; line-height: 3;"> <b>Research interests:</b></td>
