--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 <!-- 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>   -->
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
-
-	<b>Research interests:</b>
+	<p id="petite-caps"> <b>Research interests:</b></p>
+	
 </br>
 
 <!-- <table style="border-collapse: separate; border-spacing: 8px;">
