--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
 <!-- 	<p>Contact: <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a></p></p>   -->
 
 	<!-- <p><a href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf" target="_blank" class="button-round-x w-button"><strong class="bold-text-3">Download CV </strong></a>  </p> -->
-	<p id="petite-caps"> <b>Research interests:</b></p>
-	<p id="petite-caps"> Household Economics • Child Development • Technological Change </p>
-	<p id="petite-caps"> <b>References:</b></p>
-	<p id="petite-caps"> Household Economics • Child Development • Technological Change </p>
+	<p id="petite-caps"> <b>Research interests:</b> Household Economics • Child Development • Technological Change </p>
+	<p id="petite-caps"> <b>References:</b> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a> • <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a> • <a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a> </p>
 </br>
 
 <!-- <table style="border-collapse: separate; border-spacing: 8px;">
