--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	    
     <ul class="menu">
       
-      <li><a href="/">Home</a></li>
+      <li><a href="/" style="color: black;>Home</a></li>
 
       <li><a href="/research.html" style="color: black;">Research</a></li>    
 
