--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
-	<p>Get my <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank">Job Market Paper here</a> and additional Job Market information <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank">here</a>. </span></p>
+	<p>Get my <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper here</b></a> and additional Job Market information <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank"><b>here</b></a>. </span></p>
 		
-	<p id="petite-caps"> <b>References:</b> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a> · <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a> · <a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a> </p>
+	<p id="petite-caps"> <b>References:</b> <b><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></b> · <b><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></b> · <b><a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></b> </p>
 	<p id="petite-caps"> <b>Contact:</b> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a> </p>
 </br>
 
