--- a/job_market.html
+++ b/job_market.html
@@ -43,11 +43,11 @@
 
 <strong> Job Market Paper</strong>: <a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> <br>
 <br>
-<strong> Research statement</strong>: <i>download here</i> <br>
+<strong> Research statement</strong>: <a class="two" href="/files/research_statement.pdf" target="_blank"><i>download here</i></a> <br>
 <br>	
-<strong> Teaching statement</strong>: <i>download here</i> <br>
+<strong> Teaching statement</strong>: <a class="two" href="/files/teaching_statement.pdf" target="_blank"><i>download here</i></a> <br>
 <br>	
-<strong> Diversity statement</strong>: <i>download here</i> <br>	
+<strong> Diversity statement</strong>: <a class="two" href="/files/diversity_statement.pdf" target="_blank"><i>download here</i></a> <br>
 <br>	
 <strong> Contact:</strong> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a>
 <br>
