--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,13 @@ HOG 02.159
 <p>
 <strong> E-mail address:</strong> <br>
 <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
-
 </p>	
+
+<p>
+<strong> Phone number:</strong> <br>
++32 498 41 10 57
+</p>	
+	
 </br>
 </br>
 </br>
