--- a/job_market.html
+++ b/job_market.html
@@ -41,7 +41,9 @@
     </nav>
 <h2 id="job_market">Job Market information:</h2>	
 
-<strong> Job Market Paper</strong>: <a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> <br>
+<strong> Job Market Paper</strong>: <br>
+<a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> 
+	
 <br>
 <strong> Research statement</strong>: <a class="two" href="/files/research_statement.pdf" target="_blank"><i>download here</i></a> <br>
 <br>	
