--- a/job_market.html
+++ b/job_market.html
@@ -41,8 +41,9 @@
     </nav>
 <h2 id="job_market">Job Market information:</h2>	
 
-<strong> Job Market Paper</strong>: <br>
-<a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> 
+<strong> Job Market Paper</strong>: <be>
+
+<a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a> <br>
 	
 <br>
 <strong> Research statement</strong>: <a class="two" href="/files/research_statement.pdf" target="_blank"><i>download here</i></a> <br>
