--- a/job_market.html
+++ b/job_market.html
@@ -39,11 +39,14 @@
   </ul>
     <hr/>
     </nav>
+	
 <h2 id="job_market">Job Market information:</h2>	
+<p> 	
+<strong>Job Market Paper:</strong><br>
+<span style="font-size: 80%;"><a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a>  </span>
+</p>
 
-<strong> Job Market Paper</strong>: <be>
-
-<a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a> <br>
+	
 	
 <br>
 <strong> Research statement</strong>: <a class="two" href="/files/research_statement.pdf" target="_blank"><i>download here</i></a> <br>
