--- a/job_market.html
+++ b/job_market.html
@@ -41,21 +41,22 @@
     </nav>
 	
 <h2 id="job_market">Job Market information:</h2>	
+
 <p> 	
 <strong>Job Market Paper:</strong><br>
-<span style="font-size: 80%;"><a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a>  </span>
+<span><a class="two" href="/files/JMPGFernandez.pdf" target="_blank"><i>download here</i></a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a>  </span>
 </p>
 
+<p> 	
+<strong>Statements about:</strong><br>
+<span><a class="two" href="/files/research_statement.pdf" target="_blank"><i>Research</i></a> · <a class="two" href="/files/teaching_statement.pdf" target="_blank"><i>Teaching</i></a> · <a class="two" href="/files/diversity_statement.pdf" target="_blank"><i>Diversity</i></a> </span>
+</p>
 	
+<p> 	
+<strong>Contact information:</strong><br>
+<span><<a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a> · Phone number: +32 49841 10 57 </span>
+</p>
 	
-<br>
-<strong> Research statement</strong>: <a class="two" href="/files/research_statement.pdf" target="_blank"><i>download here</i></a> <br>
-<br>	
-<strong> Teaching statement</strong>: <a class="two" href="/files/teaching_statement.pdf" target="_blank"><i>download here</i></a> <br>
-<br>	
-<strong> Diversity statement</strong>: <a class="two" href="/files/diversity_statement.pdf" target="_blank"><i>download here</i></a> <br>
-<br>	
-<strong> Contact:</strong> <a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a>
 <br>
 <br>
 <br>
