--- a/job_market.html
+++ b/job_market.html
@@ -59,8 +59,10 @@
 
 <p> 	
 <strong>References:</strong><br>
-<span> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a>: <a href="mailto:laurens.cherchye@kuleuven.be">laurens.cherchye@kuleuven.be</a> </span></br>
-<span> <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>: <a href="mailto:frederic.vermeulen@kuleuven.be">frederic.vermeulen@kuleuven.be</a></span></br>
+<span> <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a>: <a href="mailto:laurens.cherchye@kuleuven.be">laurens.cherchye@kuleuven.be</a> </span><be>
+<br>	
+<span> <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>: <a href="mailto:frederic.vermeulen@kuleuven.be">frederic.vermeulen@kuleuven.be</a></span><br>
+<br>	
 <span> <a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank"><span><b>Edoardo Ciscato</b></span></a>: <a href="mailto:edoardo.ciscato@kuleuven.be">edoardo.ciscato@kuleuven.be</a></span>	
 </p>
 
