--- a/job_market.html
+++ b/job_market.html
@@ -42,6 +42,8 @@
 	
 <h2 id="job_market">Job Market information:</h2>	
 
+<p><span><b>I am on the 2024/2025 academic job market. </b></span></p><br>
+
 <p> 	
 <strong>Job Market Paper:</strong><br>
 <span><a class="two" href="/files/JMPGFernandez.pdf" target="_blank">Download here</a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a>  </span>
