--- a/job_market.html
+++ b/job_market.html
@@ -42,7 +42,7 @@
 	
 <h2 id="job_market">Job Market information:</h2>	
 
-<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
+<p><span><b><em>I am on the 2024/2025 academic job market.</em> </b></span></p>
 
 <p> 	
 <strong>Job Market Paper:</strong><br>
