--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 
 
-<img src="https://gaston-fernandez.github.io/files/FVL_0593.jpg" class="profile-img"/>
+<img src="https://gaston-fernandez.github.io/files/pic_min.jpg" class="profile-img"/>
 
   	  
 <div class="content-area">	
