--- a/job_market.html
+++ b/job_market.html
@@ -14,7 +14,17 @@
    <link rel="manifest" href="/files/site.webmanifest">
    <meta name="msapplication-TileColor" content="#da532c">
    <meta name="theme-color" content="#ffffff"> -->
-	
+<!-- Toggle abstract -->	
+<script>
+function toggleAbstract(abstractId) {
+  var x = document.getElementById(abstractId);
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>		
 </head>
 <body>
   <!-- Simplified for brevity -->
