--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	
 	<p> Contact:  <b><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be </b></a> </p>	
 	
-	<p id="petite-caps"> <b>References:</b> <b><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></b> · <b><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></b> · <b><a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></b> </p>
+	<p id="petite-caps"; font-size: 120%;> <b>References:</b> <b><a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a></b> · <b><a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank">Frederic Vermeulen</a></b> · <b><a class="two" href="https://sites.google.com/site/ciscatoedoardo/" target="_blank">Edoardo Ciscato</a></b> </p>
 	
 </br>
 
