--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,12 @@ HOG 02.159
 <strong> Phone number:</strong> <br>
 +32 498 41 10 57
 </p>	
+
+<h2 id="contact">Social media:</h2>	
+
+<p>
+<strong> <a style="margin: -200px 600px 0 0" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">Linkedin </a> </strong> <br>
+</p>		
 	
 </br>
 </br>
