--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,21 @@ HOG 02.159
 <h2 id="contact">Social media:</h2>	
 
 <p>
+<strong> <a style="margin: -200px 600px 0 0" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao" target="_blank">Google Schoolar </a> </strong> <br>
+</p>		
+
+<p>
+<strong> <a style="margin: -200px 600px 0 0" href="https://orcid.org/0000-0002-9605-389X" target="_blank">ORCID </a> </strong> <br>
+</p>		
+
+<p>
 <strong> <a style="margin: -200px 600px 0 0" href="https://www.linkedin.com/in/gastón-p-fernández-7ab217135/" target="_blank">Linkedin </a> </strong> <br>
 </p>		
+
+<p>
+<strong> <a style="margin: -200px 600px 0 0" href="https://x.com/GastFernandezB" target="_blank">X </a> </strong> <br>
+</p>		
+
 	
 </br>
 </br>
