--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
 
-<div class="social-icons">
+<!-- <div class="social-icons">
         
         <a style="margin: -300px 510px 0 0" href="https://x.com/GastFernandezB" target="_blank">
 	  <i class="fab fa-twitter"></i>
@@ -118,7 +118,7 @@
 </br>
 </br>
 </br>		
-</div>	
+</div>	 -->
 </div>		
 </br>
 
