--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 	<p>Get my <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper here</b></a> and additional Job Market information <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank"><b>here</b></a>. </span></p>
 
-	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>.</p>	
+	<p> Download CV <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>here</b></a>. Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>.</p>	
 	
 	<p> Contact:  <b><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be </b></a> </p>	
 	
