--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         
 	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
 
-	<p>Get my <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper here</b></a> and additional Job Market information <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank"><b>here</b></a>. </span></p>
+	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a>, <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>, and <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank"><b>additional Job Market information</b></a>. </span></p>
 
-	<p> Download CV <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>here</b></a>. Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>.</p>	
+	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>.</p>	
 	
 	<p> Contact:  <b><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be </b></a> </p>	
 	
