--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,10 @@ HOG 02.159
 
 <p>
 <strong> <a style="margin: -500px 600px 0 0" href="https://orcid.org/0000-0002-9605-389X" target="_blank">ORCID </a> </strong> <br>
+</p>	
+
+<p>
+<strong> <a style="margin: -500px 600px 0 0" href="https://www.scopus.com/authid/detail.uri?authorId=57225953486" target="_blank">Scopus </a> </strong> <br>
 </p>		
 
 <p>
