--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	
 	<p> My research is on <span><b>applied microeconomics</b></span>. I am interested in the quantitative modeling of personal attributes within family dynamics, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of external shocks on labor markets and their implications for household behavior. To investigate these topics, I use methods ranging from structural econometrics to causal inference.</p>
         
-	<p><span><b>I am on the 2024/2025 academic job market. </b></span></p>
+	<p><span><b>I am on the 2024/2025 academic job market and available for interviews. </b></span></p>
 
 	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a>, <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>, and <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank"><b>additional Job Market information</b></a>. </span></p>
 
