--- a/research.html
+++ b/research.html
@@ -177,7 +177,13 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=GqTkEC
 </p>		
 <hr class="publication-divider">	
 
-
+<p> 	
+<strong>Evidence on firm adoption of artificial intelligence</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <be>
+In preparation for the Edward Elgar 2nd edition of the Handbook on the Economics and Theory of the Firm<br>
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>		
+<hr class="publication-divider">	
 
 	
 </br>
