--- a/research.html
+++ b/research.html
@@ -180,7 +180,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=GqTkEC
 <p> 	
 <strong>Evidence on firm adoption of artificial intelligence</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
-In preparation for the Edward Elgar 2nd edition of the Handbook on the Economics and Theory of the Firm<br>
+<em><span style="font-size: 80%;"> In preparation for the Edward Elgar 2nd edition of the Handbook on the Economics and Theory of the Firm</span> </em><br>
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>		
 <hr class="publication-divider">	
