--- a/research.html
+++ b/research.html
@@ -60,6 +60,18 @@ function toggleAbstract(abstractId) {
 
 <p> 	
 <div class="pubthumb">
+<img src="/files/reho_logo.png" >
+</div>	
+<a class="two" href="/files/GastonFernandezKUL_20240403_REHO.pdf" target="_blank">Does personality affect the allocation of resources within households?</a>  <br>
+<strong>Review of Economics of the Household</strong>, Accepted <br>
+<span style="font-size: 80%;"> <a href="javascript:void(0);" onclick="toggleAbstract('abstract3')">Abstract</a> · <a href="/files/reho.txt" target="_blank">BibTeX</a> · <a class="two" href="/files/GastonFernandezKUL_20240403_REHO.pdf" target="_blank">Working paper</a> </span><br>
+<div id="abstract3" style="display:none; font-size: 80%;">This paper studies the influence of parental personality on child development. I exploit detailed individual-level data from the PSID and its Child Development and Wellbeing Supplements on parental personality, children’s skills, wages, and time-use decisions. Our empirical results suggest a systematic gap in cognitive and noncognitive skills between children of parents with different personalities. This skills gap increases as children grow older and remains significant after accounting for traditional family attributes. To provide a rationale for these observed patterns, I estimate a lifecycle model that incorporates parental personality and considers household decisions with an endogenous technology for a child’s cognitive and noncognitive skills. In this framework, parental personality affects the monetary and time inputs in children as well as the type of interactions between parents and children. Our simulations suggest that most of the influence of personality on a child’s skills is through its effect on the quality of parent-child interactions. Also, policies that do not account for the productivity associated with parental personality can have unexpected, negative effects on child development.
+</p>
+
+<hr class="publication-divider">
+	
+<p> 	
+<div class="pubthumb">
 <img src="/files/jebo_cover.jpg" >
 </div>	
 <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
