--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@ function toggleAbstract(abstractId) {
 
 <p> 	
 <div class="pubthumb">
-<img src="/files/reho_logo.png" >
+<img src="/files/reho_cover.jpg" >
 </div>	
 <a class="two" href="/files/GastonFernandezKUL_20240403_REHO.pdf" target="_blank">Does personality affect the allocation of resources within households?</a>  <br>
 <strong>Review of Economics of the Household</strong>, Accepted <br>
