--- a/research.html
+++ b/research.html
@@ -58,6 +58,20 @@ function toggleAbstract(abstractId) {
   <!-- Insert your research content here -->
 <h2 id="publications">Publications:<span><div class="subheading"> (<em>including forthcoming/accepted papers</em>)</div></span></h2>
 
+	
+<p> 	
+<div class="pubthumb">
+<img src="/files/jebo_cover.jpg" >
+</div>	
+<a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
+<strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205 <br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract1')">Abstract</a> · <a href="/files/JEBO2023.txt" target="_blank">BibTeX</a>  · <a href="/files/JEBO2023.pdf" target="_blank">PDF</a>  </span>
+<div id="abstract1" style="display:none; font-size: 80%;">Artificial Intelligence (AI) is often regarded as the next general-purpose technology with a rapid, penetrating, and far-reaching use over a broad number of industrial sectors. The main feature of new general-purpose technology is to enable new ways of production that may increase productivity. However, to date, only a few studies have investigated the likely productivity effects of AI at the firm-level, presumably due to limited data availability. We exploit unique survey data on firms’ adoption of AI technology and estimate its productivity effects with a sample of German firms. We employ both a cross-sectional dataset and a panel database. To address the potential endogeneity of AI adoption, we also implement IV estimators. We find positive and significant associations between the use of AI and firm productivity. This finding holds for different measures of AI usage, i.e., an indicator variable of AI adoption, and the intensity with which firms use AI methods in their business processes.</div>	
+</p>
+
+<hr class="publication-divider">
+	
 <p> 	
 <div class="pubthumb">
 <img src="/files/reho_cover.jpg" >
