--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@ function toggleAbstract(abstractId) {
 
 <p> 	
 <div class="pubthumb">
-<img src="/files/reho_cover.jpg" >
+<img src="/files/reho_logo.png" >
 </div>	
 <a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
 <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205 <br>
