--- a/research.html
+++ b/research.html
@@ -60,9 +60,9 @@ function toggleAbstract(abstractId) {
 
 <p> 	
 <div class="pubthumb">
-<img src="/files/reho_logo.png" >
+<img src="/files/reho_cover.jpg" >
 </div>	
-<a href="https://www.sciencedirect.com/science/article/pii/S0167268123001531" target="_blank"> Artificial intelligence and firm-level productivity</a>  <br>
+<a href="/files/GastonFernandezKUL_revised_REHO.pdf" target="_blank">Does personality affect the allocation of resources within households?</a>  <br>
 <strong>Journal of Economic Behavior & Organization</strong>, Volume 211, July 2023, Pages 188-205 <br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
 <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract1')">Abstract</a> · <a href="/files/JEBO2023.txt" target="_blank">BibTeX</a>  · <a href="/files/JEBO2023.pdf" target="_blank">PDF</a>  </span>
